force-app/main/default/objects/bvd_connector__Log__c.object
<CustomObject>
    <description>This object is used to store logs of any kind. From debugging to errors.</description>
    <fields>
        <fullName>bvd_connector__Apex_Class_Name__c</fullName>
        <label>Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Apex_Exception_Type__c</fullName>
        <label>Apex Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Apex_Method_Name__c</fullName>
        <label>Apex Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Apex_Stack_Trace__c</fullName>
        <label>Apex Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bvd_connector__BvD_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BvD Job</label>
        <referenceTo>bvd_connector__BvD_Job__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Guid__c</fullName>
        <externalId>true</externalId>
        <label>Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__HTTP_Body__c</fullName>
        <label>HTTP Body</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bvd_connector__HTTP_Endpoint__c</fullName>
        <label>HTTP Endpoint</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bvd_connector__HTTP_Error_Code__c</fullName>
        <label>HTTP Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__HTTP_Error_Status__c</fullName>
        <label>HTTP Error Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Logging_Level__c</fullName>
        <label>Logging Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEBUG</fullName>
                    <default>true</default>
                    <label>DEBUG</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bvd_connector__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APEX</fullName>
                    <default>true</default>
                    <label>APEX</label>
                </value>
                <value>
                    <fullName>HTTP REQUEST</fullName>
                </value>
                <value>
                    <fullName>HTTP RESPONSE</fullName>
                </value>
                <value>
                    <fullName>RESPONSE</fullName>
                </value>
                <value>
                    <fullName>REQUEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>bvd_connector__All</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Logging_Level__c</columns>
        <columns>bvd_connector__Apex_Class_Name__c</columns>
        <columns>bvd_connector__Apex_Method_Name__c</columns>
        <columns>bvd_connector__HTTP_Method__c</columns>
        <columns>bvd_connector__Message__c</columns>
        <columns>bvd_connector__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>bvd_connector__Errors_All</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Type__c</columns>
        <columns>bvd_connector__Logging_Level__c</columns>
        <columns>bvd_connector__Message__c</columns>
        <columns>bvd_connector__HTTP_Endpoint__c</columns>
        <columns>bvd_connector__HTTP_Error_Status__c</columns>
        <columns>bvd_connector__HTTP_Method__c</columns>
        <columns>bvd_connector__Apex_Method_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>bvd_connector__Logging_Level__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Errors - All</label>
    </listViews>
    <listViews>
        <fullName>bvd_connector__Errors_Today</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Apex_Class_Name__c</columns>
        <columns>bvd_connector__Apex_Exception_Type__c</columns>
        <columns>bvd_connector__Apex_Method_Name__c</columns>
        <columns>bvd_connector__Apex_Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>bvd_connector__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>bvd_connector__Logging_Level__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Errors - Today</label>
    </listViews>
    <listViews>
        <fullName>bvd_connector__Errors_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Apex_Class_Name__c</columns>
        <columns>bvd_connector__Apex_Exception_Type__c</columns>
        <columns>bvd_connector__Apex_Method_Name__c</columns>
        <columns>bvd_connector__Apex_Stack_Trace__c</columns>
        <columns>bvd_connector__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>bvd_connector__Logging_Level__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Errors - Yesterday</label>
    </listViews>
    <listViews>
        <fullName>bvd_connector__Other_All</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Logging_Level__c</columns>
        <columns>bvd_connector__Apex_Class_Name__c</columns>
        <columns>bvd_connector__Apex_Method_Name__c</columns>
        <columns>bvd_connector__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>bvd_connector__Logging_Level__c</field>
            <operation>notEqual</operation>
            <value>ERROR</value>
        </filters>
        <label>Other - All</label>
    </listViews>
    <listViews>
        <fullName>bvd_connector__Other_Today</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Apex_Class_Name__c</columns>
        <columns>bvd_connector__Apex_Method_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>bvd_connector__Logging_Level__c</columns>
        <columns>bvd_connector__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>bvd_connector__Logging_Level__c</field>
            <operation>notEqual</operation>
            <value>ERROR</value>
        </filters>
        <label>Other - Today</label>
    </listViews>
    <listViews>
        <fullName>bvd_connector__Other_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>bvd_connector__Logging_Level__c</columns>
        <columns>bvd_connector__Type__c</columns>
        <columns>bvd_connector__Apex_Class_Name__c</columns>
        <columns>bvd_connector__Apex_Method_Name__c</columns>
        <columns>bvd_connector__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>bvd_connector__Logging_Level__c</field>
            <operation>notEqual</operation>
            <value>ERROR</value>
        </filters>
        <label>Other - Yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}-{00000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>